--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,10 @@
 * {
   font-family: "Roboto", sans-serif;
 }
+
+.content {
+  padding: 1.25rem;
+  max-width: 1024px;
+  margin: 0 auto;
+  height: 100vh;
+}
